--- a/src/pages/Portfolio/Portfolio.module.css
+++ b/src/pages/Portfolio/Portfolio.module.css
@@ -1,9 +1,9 @@
 .portfolio-container {
     position: relative;
-    height: 100rem;
     isolation: isolate;
     z-index: 1;
     background-color: rgb(var(--color-white));
+    padding-top: 10rem;
 }
 
 .portfolio-container::before {
@@ -31,4 +31,18 @@
     border-bottom: var(--height) solid rgb(var(--color-orange));
     border-left: 100vw solid transparent;
     width: 0;
+}
+
+.portfolio-item-container {
+    display: flex;
+    justify-content: center;
+    margin-inline: 5rem;
+    padding-bottom: 10rem;
+}
+
+@media screen and (max-width: 1450px) {
+    .portfolio-item-container {
+        flex-direction: column;
+        align-items: center;
+    }
 }
