--- a/src/pages/Portfolio/Portfolio.module.css
+++ b/src/pages/Portfolio/Portfolio.module.css
@@ -1,9 +1,12 @@
 .portfolio-container {
     position: relative;
     isolation: isolate;
-    z-index: 1;
+    z-index: 10;
     background-color: rgb(var(--color-white));
     padding-top: 10rem;
+}
+.portfolio-container > * {
+    min-height: 100vh;
 }
 
 .portfolio-container::before {
@@ -17,7 +20,7 @@
     border-bottom: var(--height) solid rgb(var(--color-white));
     border-left: 100vw solid transparent;
     width: 0;
-    z-index: 1;
+    z-index: 10;
 }
 
 .portfolio-container::after {
