--- a/src/pages/header/Content/Header.module.css
+++ b/src/pages/header/Content/Header.module.css
@@ -10,4 +10,8 @@
 
 .header-fixed {
     position: fixed;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    justify-content: center;
 }
