--- a/src/pages/Footer/Footer.module.css
+++ b/src/pages/Footer/Footer.module.css
@@ -1,3 +1,26 @@
 .footer {
+    position: absolute;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    bottom: 0;
+    width: 100%;
     margin-block: 5rem 2rem;
+    font-size: 1.2rem;
+}
+
+.social-links {
+    cursor: pointer;
+    display: flex;
+    gap: 1rem;
+}
+
+.social-links div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.social-links img {
+    width: 20px;
 }
