--- a/src/pages/components/Buttons/BtnLink.module.css
+++ b/src/pages/components/Buttons/BtnLink.module.css
@@ -16,7 +16,7 @@ button {
     cursor: pointer;
 }
 
-.description-link::after {
+/* .description-link::after {
     content: '';
     width: 100%;
     height: 100%;
@@ -40,11 +40,11 @@ button {
 
 .description-link:active::after {
     box-shadow: inset 2px 2px 5px 1px black;
-}
+} */
 
-.anglais {
+/* .anglais {
     color: rgb(var(--color-grey));
-}
+} */
 
 /* Hover Btn */
 
