--- a/src/pages/Portfolio/Portfolio.module.css
+++ b/src/pages/Portfolio/Portfolio.module.css
@@ -11,6 +11,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    position: relative;
 }
 
 .portfolio-container > div:nth-of-type(1) {
@@ -44,14 +45,22 @@
     width: 0;
 }
 
-.portfolio-item-container {
+.portfolio-item-container,
+.portfolio-item-container-title {
     display: flex;
+    flex-direction: row;
+    align-items: center;
     justify-content: center;
-    margin-inline: 5rem;
+    margin-inline: 5rem 8rem;
+}
+
+.portfolio-item-container {
+    position: relative;
 }
 
 @media screen and (max-width: 1450px) {
-    .portfolio-item-container {
+    .portfolio-item-container,
+    .portfolio-item-container-title {
         flex-direction: column;
         align-items: center;
     }
