--- a/src/pages/Socials/Socials.module.css
+++ b/src/pages/Socials/Socials.module.css
@@ -32,7 +32,7 @@
 
 /* Animation on load */
 
-@media screen and not (prefers-reduced-motion) {
+@media screen and (prefers-reduced-motion: no-preference) {
     .social-container {
         transform: translateX(calc(-1 * var(--width)));
     }
