--- a/src/pages/components/Buttons/BtnLink.module.css
+++ b/src/pages/components/Buttons/BtnLink.module.css
@@ -14,6 +14,12 @@ button {
     width: fit-content;
     align-self: center;
     cursor: pointer;
+    transition: all 300ms;
+}
+
+#absolute {
+    position: absolute;
+    bottom: 10rem;
 }
 
 /* .description-link::after {
@@ -59,6 +65,10 @@ button {
     translate: calc(-1 * var(--radius) / 2) calc(-1 * var(--radius) / 2);
     border-radius: 1rem;
     opacity: 0;
+}
+
+.description-link:hover {
+    transform: translateY(-1rem);
 }
 
 .description-link:hover .circle {
