--- a/src/pages/header/Content/HeaderDescription.module.css
+++ b/src/pages/header/Content/HeaderDescription.module.css
@@ -14,6 +14,7 @@
     top: -50%;
     position: absolute;
     transition: translate 300ms;
+    stroke: rgb(var(--color-orange));
 }
 
 .left-brace {
@@ -48,7 +49,7 @@
 
 /* Animation on load */
 
-@media screen and not (prefers-reduced-motion) {
+@media screen and (prefers-reduced-motion: no-preference) {
     .header-description {
         opacity: 0;
         transform: translateY(5rem);
