--- a/src/pages/components/Title/SectionTitle.module.css
+++ b/src/pages/components/Title/SectionTitle.module.css
@@ -3,7 +3,7 @@
     position: absolute;
     justify-content: center;
     gap: 2rem;
-    margin-block: 5rem;
+    margin-block: 10rem 5rem;
     text-transform: uppercase;
     top: 0;
     left: 0;
