--- a/src/pages/Contact/Contact.module.css
+++ b/src/pages/Contact/Contact.module.css
@@ -8,6 +8,22 @@
     min-height: 100vh;
 }
 
+.contact-container::before {
+    content: '';
+    position: absolute;
+    height: 2px;
+    box-shadow: inset 3px 5px transparent;
+    width: 80%;
+    top: -1px;
+    left: 10%;
+    background: linear-gradient(
+        90deg,
+        transparent,
+        rgb(var(--color-orange)),
+        transparent
+    );
+}
+
 .contact-container button {
     margin-block: 3rem;
 }
