--- a/src/pages/Portfolio/Description/PortfolioDescription.module.css
+++ b/src/pages/Portfolio/Description/PortfolioDescription.module.css
@@ -1,6 +1,8 @@
 .description-container {
     display: flex;
     flex-direction: column;
+    padding-left: 5rem;
+    justify-content: space-between;
 }
 
 .description-container * {
@@ -8,7 +10,7 @@
 }
 
 .description-container h3 {
-    font-size: 2rem;
+    font-size: 5rem;
     margin-bottom: 1rem;
 }
 
@@ -17,10 +19,6 @@
 }
 
 .description-container p:nth-of-type(1) {
-    margin-bottom: 0.8rem;
-}
-
-.description-container p:nth-of-type(2) {
     margin-bottom: 2rem;
 }
 
