--- a/src/pages/Portfolio/Portfolio.module.css
+++ b/src/pages/Portfolio/Portfolio.module.css
@@ -3,7 +3,7 @@
     isolation: isolate;
     z-index: 10;
     background-color: rgb(var(--color-white));
-    padding-top: 10rem;
+    padding-top: 20rem;
 }
 
 .portfolio-container > * {
@@ -45,22 +45,44 @@
     width: 0;
 }
 
+.item-wrapper {
+    display: flex;
+}
+
 .portfolio-item-container,
 .portfolio-item-container-title {
     display: flex;
     flex-direction: row;
-    align-items: center;
     justify-content: center;
-    margin-inline: 5rem 8rem;
+    margin-inline: auto;
+    padding-inline: 5rem 8rem;
+    max-width: 140rem;
+    align-items: center;
 }
 
 .portfolio-item-container {
+    padding-block: 10rem;
     position: relative;
 }
 
+.portfolio-item-container::before {
+    content: '';
+    position: absolute;
+    height: 2px;
+    box-shadow: inset 3px 5px transparent;
+    width: 80%;
+    top: -1px;
+    left: 10%;
+    background: linear-gradient(
+        90deg,
+        transparent,
+        rgb(var(--color-orange)),
+        transparent
+    );
+}
+
 @media screen and (max-width: 1450px) {
-    .portfolio-item-container,
-    .portfolio-item-container-title {
+    .item-wrapper {
         flex-direction: column;
         align-items: center;
     }
