--- a/src/pages/UI/Sliders.module.css
+++ b/src/pages/UI/Sliders.module.css
@@ -1,5 +1,4 @@
 .theme-switch-container {
-    position: fixed;
     display: flex;
     align-items: center;
     z-index: 1000;
@@ -29,6 +28,9 @@
     right: 0;
     top: 0;
     transition: 300ms;
+    display: flex;
+    padding: 8px 10px;
+    justify-content: space-between;
     /* border: 1px solid black; */
 }
 
@@ -43,7 +45,11 @@
     width: 26px;
 }
 
-[data-theme='dark'] .slider::before {
+[data-theme='dark'] .mode-slider::before {
+    transform: translateX(26px);
+}
+
+[data-langage='right'].langage-slider::before {
     transform: translateX(26px);
 }
 
@@ -53,4 +59,39 @@
 
 .slider.round::before {
     border-radius: 50%;
+}
+
+.slider p {
+    z-index: 10;
+    left: 10px;
+    bottom: 10px;
+    font-size: 1.2rem;
+    font-weight: 500;
+    color: rgb(var(--color-orange));
+}
+
+.slider p:nth-of-type(1) {
+    left: 10px;
+}
+
+.slider p:nth-of-type(2) {
+    right: 26px;
+    width: fit-content;
+}
+
+.sun,
+.moon {
+    translate: -3px -1px;
+    width: 20px;
+    height: 20px;
+    z-index: 10;
+    transition: all 200ms;
+}
+
+.moon {
+    translate: 2px -1px;
+}
+
+.hidden-icon {
+    opacity: 0;
 }
