added slider menu

--- a/src/pages/Footer/Footer.module.css
+++ b/src/pages/Footer/Footer.module.css
@@ -27,6 +27,10 @@
     transition: opacity 300ms;
 }
 
+main[data-theme='dark'] .social-links img {
+    filter: invert(100%);
+}
+
 .social-links div:hover img {
     opacity: 1;
 }
