--- a/src/pages/UI/OptionsBtn.module.css
+++ b/src/pages/UI/OptionsBtn.module.css
@@ -1,35 +1,127 @@
 .sliders-container {
     position: fixed;
-    right: 0;
-    top: 0;
-    z-index: 150;
-    cursor: pointer;
-    padding: 1rem 1rem;
-}
-
-.sliders-container.visible {
-    background: rgb(var(--color-red-soft-hex));
-    border: rgb(var(--color-red-soft-hex)) 2px solid;
-}
-
-.menu-lines {
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    right: 1rem;
+    top: 1rem;
+    z-index: 150;
+    cursor: pointer;
+    padding-top: 5rem;
+    isolation: isolate;
+    overflow: hidden;
+    padding: 5rem 2rem 1rem;
+    border-bottom-left-radius: 20%;
+    width: 100px;
+    height: 138px;
+}
+
+.sliders-container::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background: rgb(var(--color-red-soft));
+    opacity: 0;
+    transition: transform 500ms, opacity 300ms 300ms;
+}
+
+.sliders-container:not(.active) .menu-lines:hover span {
+    width: var(--width-hover);
+}
+
+.sliders-container.active::before {
+    opacity: 1;
+    transform: scale(50);
+    transition: transform 1s;
+}
+
+.menu-lines {
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    width: 32px;
+    height: 32px;
     align-items: end;
+    transition: all 500ms;
+    border-radius: 50%;
 }
 
 .menu-lines span {
+    --width: 32px;
+    --width-hover: 15px;
     height: 4px;
-    width: 30px;
+    width: var(--width);
     border-radius: 4px;
     background-color: rgb(var(--color-orange));
+    transition: all 500ms;
 }
 
 .menu-lines span:nth-child(2) {
-    width: 20px;
+    --width: 20px;
+    --width-hover: 20px;
 }
 
 .menu-lines span:nth-child(3) {
-    width: 15px;
+    --width: 15px;
+    --width-hover: 32px;
+}
+
+.sliders-container > div:nth-child(2),
+.sliders-container > div:nth-child(3) {
+    opacity: 0;
+}
+
+.active > div:nth-child(2),
+.active > div:nth-child(3) {
+    transition: opacity 300ms;
+    transition-delay: 150ms;
+    opacity: 1;
+}
+
+.active > div:nth-child(3) {
+    transition: opacity 300ms;
+    transition-delay: 300ms;
+}
+
+/* Animation */
+
+/* .sliders-container.active .menu-lines::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: radial-gradient(circle at center, transparent 65%, green 80%);
+    border-radius: 50%;
+} */
+
+.sliders-container.active .menu-lines span:nth-child(1) {
+    width: 4px;
+    opacity: 0;
+}
+
+.sliders-container.active .menu-lines span:nth-child(2) {
+    width: 30px;
+    translate: -1px;
+    rotate: 45deg;
+}
+
+.sliders-container.active .menu-lines span:nth-child(3) {
+    width: 30px;
+    translate: -1px -14px;
+    rotate: -45deg;
+}
+
+.sliders-container.active .menu-lines:hover span:nth-child(2) {
+    rotate: 90deg;
+}
+
+.sliders-container.active .menu-lines:hover span:nth-child(3) {
+    rotate: 0deg;
 }
