--- a/src/pages/UI/SectionSelector.module.css
+++ b/src/pages/UI/SectionSelector.module.css
@@ -1,8 +1,8 @@
 .svg-container {
     position: fixed;
     width: 30px;
-    height: 100vh;
     top: 0;
+    bottom: 0;
     right: 2rem;
     z-index: 100;
     display: flex;
