--- a/src/pages/header/HeaderBackground.module.css
+++ b/src/pages/header/HeaderBackground.module.css
@@ -7,25 +7,29 @@
     z-index: -1;
     width: var(--image-width);
     height: var(--image-width);
-    /* rotate: 45deg; */
 }
 
 .square {
-    /* transform: translate(
-        calc(-0.5 * var(--dimension)),
-        calc(-0.5 * var(--dimension))
-    ); */
     z-index: -1;
     filter: blur(1px);
-    width: calc(var(--dimension) * 2);
-    height: calc(var(--dimension) * 2);
+    width: 100%;
+    height: 100%;
 }
 
 .square rect {
-    height: calc(2 * var(--dimension));
-    width: calc(2 * var(--dimension));
+    height: 100%;
+    width: 100%;
     stroke: rgba(var(--color-red-soft), 0.5);
     stroke-width: 5rem;
     fill: none;
-    /* fill: rgb(var(--color-red-soft)); */
+}
+
+/* Individual squares */
+
+#one {
+    transform: scale(1.5) rotate(45deg);
+}
+
+#two {
+    transform: scale(1.2) translate(250px, -150px) rotate(45deg);
 }
