--- a/src/pages/Contact/Contact.module.css
+++ b/src/pages/Contact/Contact.module.css
@@ -8,6 +8,16 @@
     min-height: 100vh;
 }
 
+.contact-message {
+    font-size: 2.4rem;
+    max-width: 80rem;
+    color: rgb(var(--color-orange));
+    font-weight: 700;
+    margin-inline: auto;
+    margin-bottom: 5rem;
+    text-wrap: balance;
+}
+
 .contact-container::before {
     content: '';
     position: absolute;
@@ -45,16 +55,19 @@
 .form-contact-container input,
 .form-contact-container textarea {
     text-align: start;
+    color: black;
     border: 2px solid rgb(var(--color-orange));
     border-radius: 1rem;
     padding: 1rem;
     max-width: 50rem;
+    resize: none;
 }
 
 .form-contact-container input:focus,
 .form-contact-container textarea:focus {
-    outline: rgb(var(--color-red-bright)) 2px solid;
+    border: green 2px solid;
     outline-offset: 2px;
+    outline: none;
 }
 
 label.description {
