--- a/src/pages/Portfolio/Description/PortfolioDescription.module.css
+++ b/src/pages/Portfolio/Description/PortfolioDescription.module.css
@@ -1,8 +1,9 @@
 .description-container {
+    --gap: 5rem;
     display: flex;
     flex-direction: column;
     padding-left: 5rem;
-    justify-content: space-between;
+    gap: var(--gap);
 }
 
 .description-container * {
@@ -15,15 +16,27 @@
 }
 
 .description-container p {
+    position: relative;
+    font-size: 1.8rem;
+    text-wrap: balance;
+}
+
+.description-container p:nth-of-type(2) {
     font-size: 1.6rem;
+    color: rgb(155, 0, 0);
+    font-weight: 500;
 }
 
-.description-container p:nth-of-type(1) {
-    margin-bottom: 2rem;
-}
-
-.anglais {
-    color: rgb(var(--color-grey));
+.description-container p::before,
+.description-container > :last-child::before {
+    content: '';
+    position: absolute;
+    top: calc(-0.5 * var(--gap));
+    display: block;
+    height: 2px;
+    width: 80%;
+    background-color: rgb(var(--color-orange));
+    border-radius: 1rem;
 }
 
 @media screen and (max-width: 1450px) {
