--- a/src/pages/components/Buttons/BtnLink.module.css
+++ b/src/pages/components/Buttons/BtnLink.module.css
@@ -5,7 +5,6 @@ button {
 .description-link {
     position: relative;
     font-size: 1.6rem;
-    color: rgb(var(--color-white));
     font-weight: 600;
     text-decoration: none;
     background-color: rgb(var(--color-orange));
@@ -15,6 +14,10 @@ button {
     align-self: center;
     cursor: pointer;
     transition: all 300ms;
+}
+
+.description-link span {
+    color: rgb(var(--color-white-text-both));
 }
 
 #absolute {
