--- a/src/pages/components/Title/SectionTitle.module.css
+++ b/src/pages/components/Title/SectionTitle.module.css
@@ -8,33 +8,15 @@
     top: 0;
     left: 0;
     width: 100%;
+    font-size: 5rem;
+    color: rgb(var(--color-orange));
 }
 
-.section-title p {
-    font-size: 3rem;
-}
-
-.section-separator,
-.section-separator::before {
-    width: 5px;
-}
-
-.section-separator {
-    position: relative;
-    transform: skew(-30deg) translate(10px, 1rem);
-    background-color: rgb(var(--color-grey));
-}
-
-.section-separator::before {
+.section-title::before,
+.section-title::after {
     content: '';
-    position: absolute;
-    top: 0;
-    left: -10px;
-    height: 100%;
-    background-color: black;
-}
-
-.anglais {
-    transform: translateY(2rem);
-    color: rgb(var(--color-grey));
+    width: 30%;
+    height: 2px;
+    background-color: rgb(var(--color-orange));
+    margin-block: auto;
 }
