--- a/src/pages/UI/Nav.module.css
+++ b/src/pages/UI/Nav.module.css
@@ -11,6 +11,7 @@
     justify-content: center;
     margin-top: 2rem;
     z-index: 1;
+    transition: all 300ms;
 }
 
 .nav a {
@@ -37,4 +38,9 @@
 
 .sticky {
     /* z-index: 100; */
+}
+
+.transition {
+    translate: 0 -5rem;
+    opacity: 0;
 }
