--- a/src/pages/UI/SectionSelector.module.css
+++ b/src/pages/UI/SectionSelector.module.css
@@ -77,3 +77,9 @@
     rotate: 90deg;
     translate: 15px -10px;
 }
+
+@media screen and (max-width: 700px) {
+    .svg-container {
+        display: none;
+    }
+}
