--- a/src/pages/components/Buttons/BtnLink.module.css
+++ b/src/pages/components/Buttons/BtnLink.module.css
@@ -14,6 +14,7 @@ button {
     align-self: center;
     cursor: pointer;
     transition: all 300ms;
+    margin-inline: auto;
 }
 
 .description-link span {
