--- a/src/pages/components/Buttons/ToTop.module.css
+++ b/src/pages/components/Buttons/ToTop.module.css
@@ -1,11 +1,9 @@
 .arrow {
-    position: absolute;
     display: block;
     width: 50px;
     height: 50px;
     bottom: 10rem;
-    left: 50%;
-    right: 50%;
+    margin-inline: auto;
     cursor: pointer;
     fill: rgb(var(--color-orange));
     transition: all 300ms ease-in-out;
