--- a/src/pages/components/Title/SectionTitle.module.css
+++ b/src/pages/components/Title/SectionTitle.module.css
@@ -1,9 +1,8 @@
 .section-title {
     display: flex;
-    position: absolute;
     justify-content: center;
     gap: 2rem;
-    margin-block: 10rem 5rem;
+    margin-block: 2rem 5rem;
     text-transform: uppercase;
     top: 0;
     left: 0;
@@ -19,4 +18,10 @@
     height: 2px;
     background-color: rgb(var(--color-orange));
     margin-block: auto;
+}
+
+@media screen and (max-width: 700px) {
+    .section-title {
+        font-size: 3rem;
+    }
 }
