--- a/src/pages/header/Header.module.css
+++ b/src/pages/header/Header.module.css
@@ -1,11 +1,13 @@
 .header {
     display: flex;
+    position: relative;
     justify-content: center;
     flex-direction: column;
     background: rgb(var(--color-red-bright));
     padding-block: 0rem 20rem;
     width: 100%;
     min-height: calc(100vh + 20rem);
+    isolation: isolate;
 }
 
 .header::before {
@@ -16,6 +18,7 @@
     height: 15rem;
     background: linear-gradient(transparent, rgb(var(--color-red-soft)));
     transition: all 300ms;
+    z-index: -1;
 }
 
 .header-fixed {
