--- a/src/pages/header/HeaderBackground.module.css
+++ b/src/pages/header/HeaderBackground.module.css
@@ -1,166 +1,37 @@
-/* SVG background */
-
 .background-container {
-    position: absolute;
-    scale: 0.5;
-    top: 0;
-    left: 0;
+    position: fixed;
     width: 100%;
     height: 100%;
-    animation: rotating 60s linear infinite;
+    z-index: -1;
 }
 
-@keyframes rotating {
-    to {
-        rotate: 360deg;
-    }
-}
+/* Arrow */
 
-.background-container svg {
-    transform: translate(-55rem, -35rem) scale(1.1);
-}
-
-.background-container rect {
-    fill: none;
-    pointer-events: none;
-}
-
-.background-container path {
-    fill: rgb(255, 255, 255);
-    fill-opacity: 0;
-    stroke: rgb(var(--color-orange));
-    stroke-opacity: 1;
-    stroke-width: 8;
-    paint-order: fill;
+.arrow {
+    position: absolute;
+    top: -150%;
+    left: 0;
+    right: 0;
+    margin-inline: auto;
+    width: 80%;
+    transition: top 3s;
     opacity: 0;
-    --stroke-dashoffset: 180;
-
-    stroke-dasharray: 180;
-    stroke-dashoffset: 0;
-    animation: dash 3s forwards cubic-bezier(0.19, 0.67, 0.73, 0.32) infinite;
-    animation-delay: var(--dash-delay);
 }
 
-@keyframes dash {
-    0% {
-        stroke-dashoffset: var(--stroke-dashoffset);
-        opacity: 1;
-    }
-    25% {
-        stroke-dashoffset: 10;
-        opacity: 1;
-    }
-    50% {
-        opacity: 1;
-        stroke-dashoffset: 0;
-    }
-    75% {
-        opacity: 1;
-        stroke-dashoffset: 10;
-    }
-    100% {
-        opacity: 1;
-        stroke-dashoffset: var(--stroke-dashoffset);
-    }
+.arrow path {
+    stroke: rgba(var(--color-orange), 0.5);
+    stroke-width: 1;
+    fill: transparent;
+    filter: drop-shadow(0px 0.5px 0.5px rgb(0 0 0));
 }
 
-path:nth-of-type(2),
-path:nth-of-type(4),
-path:nth-of-type(6),
-path:nth-of-type(8),
-path:nth-of-type(10),
-path:nth-of-type(12),
-path:nth-of-type(14),
-path:nth-of-type(16),
-path:nth-of-type(18),
-path:nth-of-type(20),
-path:nth-of-type(22),
-path:nth-of-type(24),
-path:nth-of-type(26),
-path:nth-of-type(28) {
-    --stroke-dashoffset: -80;
+.transition .arrow {
+    opacity: 1;
+    animation: arrowTransition 3s forwards 1s;
 }
-path:nth-of-type(1) {
-    --dash-delay: 800ms;
-}
-path:nth-of-type(2) {
-    --dash-delay: 850ms;
-}
-path:nth-of-type(3) {
-    --dash-delay: 900ms;
-}
-path:nth-of-type(4) {
-    --dash-delay: 950ms;
-}
-path:nth-of-type(5) {
-    --dash-delay: 1000ms;
-}
-path:nth-of-type(6) {
-    --dash-delay: 1050ms;
-}
-path:nth-of-type(7) {
-    --dash-delay: 1100ms;
-}
-path:nth-of-type(8) {
-    --dash-delay: 1150ms;
-}
-path:nth-of-type(9) {
-    --dash-delay: 1200ms;
-}
-path:nth-of-type(10) {
-    --dash-delay: 1250ms;
-}
-path:nth-of-type(11) {
-    --dash-delay: 1300ms;
-}
-path:nth-of-type(12) {
-    --dash-delay: 1350ms;
-}
-path:nth-of-type(13) {
-    --dash-delay: 1400ms;
-}
-path:nth-of-type(14) {
-    --dash-delay: 1450ms;
-}
-path:nth-of-type(15) {
-    --dash-delay: 1500ms;
-}
-path:nth-of-type(16) {
-    --dash-delay: 1550ms;
-}
-path:nth-of-type(17) {
-    --dash-delay: 1600ms;
-}
-path:nth-of-type(18) {
-    --dash-delay: 1650ms;
-}
-path:nth-of-type(19) {
-    --dash-delay: 1700ms;
-}
-path:nth-of-type(20) {
-    --dash-delay: 1750ms;
-}
-path:nth-of-type(21) {
-    --dash-delay: 1800ms;
-}
-path:nth-of-type(22) {
-    --dash-delay: 1850ms;
-}
-path:nth-of-type(23) {
-    --dash-delay: 1900ms;
-}
-path:nth-of-type(24) {
-    --dash-delay: 1950ms;
-}
-path:nth-of-type(25) {
-    --dash-delay: 2000ms;
-}
-path:nth-of-type(26) {
-    --dash-delay: 2050ms;
-}
-path:nth-of-type(27) {
-    --dash-delay: 2100ms;
-}
-path:nth-of-type(28) {
-    --dash-delay: 2150ms;
+
+@keyframes arrowTransition {
+    to {
+        top: 100%;
+    }
 }
