--- a/src/pages/header/HeaderDescription.module.css
+++ b/src/pages/header/HeaderDescription.module.css
@@ -10,13 +10,18 @@
 }
 
 .header-description-text {
+    transition: opacity 300ms;
     color: rgb(var(--color-white-text-both));
+}
+
+.transition .header-description-text {
+    opacity: 0;
 }
 
 .curly-braces {
     height: 200px;
     position: absolute;
-    transition: translate 300ms;
+    transition: translate 300ms, opacity 300ms;
     stroke: rgb(var(--color-orange));
 }
 
@@ -45,6 +50,16 @@
 .header-description p {
     text-wrap: balance;
     max-width: 90rem;
+}
+
+.transition .left-brace {
+    opacity: 0;
+    translate: -5rem;
+}
+
+.transition .right-brace {
+    opacity: 0;
+    translate: 5rem;
 }
 
 /* Animation on load */
