--- a/src/pages/header/ScrollIcon.module.css
+++ b/src/pages/header/ScrollIcon.module.css
@@ -46,5 +46,15 @@
     }
 }
 
+g {
+    transition: all 300ms;
+}
+
 .transition {
+    border: none;
+}
+
+.transition g {
+    opacity: 0;
+    translate: 0 5rem;
 }
