--- a/src/pages/Portfolio/Item/PortfolioItem.module.css
+++ b/src/pages/Portfolio/Item/PortfolioItem.module.css
@@ -25,13 +25,12 @@ img {
     display: flex;
     gap: 1rem;
     max-width: 100%;
-    contain: content;
     /* added padding to prevent issue with outlines */
     padding: 0.5rem;
     flex-shrink: 1;
 
     flex-direction: row;
-    height: 30rem;
+    height: 32rem;
 }
 
 @media (max-width: 850px) or (min-width: 1450px) {
@@ -41,12 +40,18 @@ img {
     }
 
     .accordion img {
-        aspect-ratio: 2;
         width: 100%;
     }
 
     .wrapper {
         max-width: 100%;
+    }
+}
+
+@media (max-width: 850px) {
+    .accordion,
+    .wrapper {
+        width: 100%;
     }
 }
 
