--- a/src/pages/components/Buttons/BtnLink.module.css
+++ b/src/pages/components/Buttons/BtnLink.module.css
@@ -17,6 +17,10 @@ button {
     margin-inline: auto;
 }
 
+a span:last-child {
+    padding-inline: 2rem;
+}
+
 .description-link span {
     color: rgb(var(--color-white-text-both));
 }
@@ -28,36 +32,6 @@ button {
     left: calc(50% - 76px);
     right: calc(50% - 76px);
 }
-
-/* .description-link::after {
-    content: '';
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    border-radius: 1rem;
-    opacity: 0;
-    box-shadow: inset -2px -2px 5px 1px black;
-    transition-duration: 800ms;
-}
-
-.description-link:hover::after {
-    opacity: 1;
-}
-
-.description-link:focus {
-    outline: 2px solid rgb(var(--color-red-bright));
-    outline-offset: 2px;
-}
-
-.description-link:active::after {
-    box-shadow: inset 2px 2px 5px 1px black;
-} */
-
-/* .anglais {
-    color: rgb(var(--color-grey));
-} */
 
 /* Hover Btn */
 
@@ -75,6 +49,7 @@ button {
 }
 
 .description-link:hover {
+    transition-delay: 0ms;
     transform: translateY(-1rem);
 }
 
