--- a/src/pages/components/Buttons/ToTop.module.css
+++ b/src/pages/components/Buttons/ToTop.module.css
@@ -1,12 +1,13 @@
 .arrow {
+    position: relative;
     display: block;
     width: 50px;
     height: 50px;
-    bottom: 10rem;
     margin-inline: auto;
     cursor: pointer;
     fill: rgb(var(--color-orange));
     transition: all 300ms ease-in-out;
+    margin-block: 2rem;
 }
 
 .arrow span {
