--- a/src/pages/header/HeaderTitle.module.css
+++ b/src/pages/header/HeaderTitle.module.css
@@ -16,13 +16,13 @@
 }
 
 .photo-finissant {
-    background-color: rgb(var(--color-red-bright), 0.8);
+    /* background-color: rgb(var(--color-red-bright), 0.8); */
     height: 30rem;
     aspect-ratio: 1;
     border-radius: 100%;
-    border: 2px rgb(var(--color-red-soft)) solid;
+    border: 3px rgb(var(--color-red-soft)) solid;
     float: right;
-    box-shadow: 5px 5px 5px 1px rgb(var(--color-red-soft));
+    filter: drop-shadow(0px 0px 20px black);
 }
 
 .header-name,
